Fixed charts only tabs on mobile

--- a/css/chartsonly.css
+++ b/css/chartsonly.css
@@ -50,8 +50,8 @@
  position:absolute;
  top:25px;
  left:15px;
- height:100px;
- width:100px;
+ height:auto;
+ width:auto;
  z-index:3000;
 }
 
@@ -188,6 +188,12 @@
 #mainchart {}
 #secondchart {}
 @media(max-width: 768px){
+.toggle-tab {
+ flex-basis:25%;
+  min-width:initial;
+  font-size:12px;
+}  
+  
 .stdcharts{
   position:relative;
   display:block;
@@ -201,4 +207,6 @@
   padding: 30px 0;
   background: rgba(38,38,38,1);
  }
+ 
+ 
 }
